--- a/ACM/fin/题目.md
+++ b/ACM/fin/题目.md
@@ -88,8 +88,8 @@ B 等距三元组
 数据范围
 - 对于所有测试点， $1 \leq n \leq 5000$
 - 输入保证构成一棵无向树。
-
-
+先别写代码，分析题目，给出时间上最好的解法(必须要快于O(n^2))。仔细审题，看看有没有容易踩坑的地方。
+使用C++生成代码
 
 C
 题目描述
@@ -267,3 +267,6 @@ F
 数字表示队员编号，队列按从左到右顺序
 窗口一：2 4 1
 窗口二：5 3
+
+先别写代码，分析题目，给出时间上最好的解法。仔细审题，看看有没有容易踩坑的地方。注意分队和排队的顺序都会影响答案。
+使用C++生成代码
